# Sam-Maurer-s-SnowWork-Skills-and-Files

./: README.md  deploy.py
CoCo_pptx_Skill/: SKILL.md
projects/cx-project-tracking-1.8.2/: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  diagnose-tracking.ps1  diagnose-tracking.sh  install.ps1  install.sh  pyproject.toml
projects/cx-project-tracking-1.8.2/.cortex/: INSTRUCTIONS.md
projects/cx-project-tracking-1.8.2/.github/: CODEOWNERS  repo_meta.yaml
projects/cx-project-tracking-1.8.2/.github/workflows/: query-tag-validation.yml
projects/cx-project-tracking-1.8.2/cli/: session-end.sh  session-tag-init.sh  user-prompt-check.sh
projects/cx-project-tracking-1.8.2/dashboard/: app.py
projects/cx-project-tracking-1.8.2/docs/: FAQ.md  GAP_ANALYSIS.md  USER_FLOW_PSEUDOCODE.md  USER_OPERATIONAL_PATTERNS.md
projects/cx-project-tracking-1.8.2/skills/sd-project-list-setup/: SKILL.md
projects/cx-project-tracking-1.8.2/snowwork/: session-end.sh  session-tag-init.sh  user-prompt-check.sh
projects/cx-project-tracking-1.8.2/test/: Dockerfile.bash  Dockerfile.crlf  Dockerfile.powershell  docker-compose.yml  run-tests.sh  test-crlf.sh  test-install-ps1.ps1  test-install-sh.sh
scope-proposal-estimator/: SKILL.md
skills/proposal-generator-skill/: SKILL.md  pyproject.toml
skills/proposal-generator-skill/references/: example_inputs.md
skills/proposal-generator-skill/scripts/: render_pptx.py
skills/proposal-generator-skill/templates/sd-technical-deal-review/: SKILL.md  schema.json  template.pptx
(+213 files in other folders)
